--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/neumorphicLogin.css">
+    <title>Login</title>
 </head>
 <body>
-    
+    <div class="login-div">
+        <div class="logo"></div>
+        <div class="title">Red stapler</div>
+        <div class="sub-title">BETA</div>
+    </div>
 </body>
 </html>
