--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
 </head>
 <body>
     <div class="login-div">
-        <div class="logo"></div>
-        <div class="title">Red stapler</div>
-        <div class="sub-title">BETA</div>
+        <div class="logo">
+            <img src="img/bg.jpg" alt="">
+        </div>
+        <div class="title">You Title</div>
+        <div class="sub-title">Subtitle</div>
+        <form class="fields">
+            <div class="username">
+                <input type="username" class="user-input" placeholder="username">
+            </div>
+            <div class="password">
+                <input type="password" class="password-input" placeholder="password">
+            </div>
+            <button class="signin-button">Login</button>
+        </form>
     </div>
 </body>
 </html>
