--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/neumorphicLogin.css">
     <title>Login</title>
 </head>
@@ -33,6 +34,9 @@
                 <input type="password" class="password-input" placeholder="password">
             </div>
             <button class="signin-button">Login</button>
+            <div class="link">
+                <a href="">Forgot password?</a> or <a href="">Sign-up</a>
+            </div>
         </form>
     </div>
 </body>
